<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_environment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_env" />
    <item
        android:id="@+id/nav_control"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_control" />
    <item
        android:id="@+id/nav_management"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_mgmt" />
    <item
        android:id="@+id/nav_security"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_security" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings" />
</menu>
